Complete book API CRUD
Resolves #7
